tdf#145130 Keep existing gradient geometry using sidebar

When setting the start or end color of a gradient of a slide using the
sidebar, the new colors were set to a default gradient instead of using
the existing one.

Change-Id: I0212d2d88e7eb144334308dedd057958ae0a8287
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153634
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
(cherry picked from commit 9321f8602ec903e1e311b831da0504826e1e4f90)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153667
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>